# hft-backtest-engine

./: .gitignore  CMakeLists.txt  LLM_CONTEXT.md  README.md  TODO.md
benchmarks/: bench_order_book.cpp
build-release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_test_discovery_cc414f87ec.json  compile_commands.json  lob_backtest  lob_benchmarks  lob_tests  lob_tests[1]_include.cmake  lob_tests[1]_tests.cmake
build-release/Testing/Temporary/: CTestCostData.txt
docs/: polymarket_gdrive_server.md
include/lob/: PolymarketFeedAdapter.hpp  PolymarketOrderBook.hpp  PolymarketTypes.hpp  analytics.hpp  async_logger.hpp  backtest_engine.hpp  csv_parser.hpp  dynamic_wallet.hpp  event.hpp  event_depth5.hpp  event_l2_update.hpp  event_merger.hpp  graph_arbitrage_engine.hpp  inventory_skew_strategy.hpp  l2_backtest_engine.hpp  l2_csv_parser.hpp  l2_depth5_csv_parser.hpp  l2_market_maker_strategy.hpp  l2_order_book.hpp  l2_strategy.hpp  l2_update_csv_parser.hpp  lookup_policy.hpp  market_maker_strategy.hpp  multi_asset_backtest_engine.hpp  oms.hpp  order.hpp  order_book.hpp  order_gateway.hpp  price_level.hpp  strategy.hpp  trade.hpp  triangular_arbitrage_strategy.hpp  venue_manifest.hpp  venue_replay.hpp  wallet.hpp
pyresearch/: firstresearch.ipynb
scripts/: analyze_results.py  archive_upload_polymarket_gdrive.sh  bbo_to_l2update.py  download_binance_data.py  download_bookticker_data.py  download_data.py  download_futures_depth_data.py  download_tardis.py  generate_dummy_data.py  optimize_grid.py  plot_results.py  record_polymarket_ws.py  run_graph_arbitrage.py  tardis_to_bookticker.py  tardis_to_depth5.py  tardis_to_l2update.py
src/: backtest_engine.cpp  bindings.cpp  csv_parser.cpp  l2_backtest_engine.cpp  l2_csv_parser.cpp  l2_depth5_csv_parser.cpp  l2_update_csv_parser.cpp  main_backtest.cpp  order_book.cpp
tests/: test_lob.cpp
